Fixes menu and social icons overlapping issue.
Keeps the menu at the top of the screen in all views and prevents
overlapping of menu and social icons when option "Only display header on
home page" is used.

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -562,7 +562,8 @@ textarea {
 .main-navigation {
     clear: both;
     display: block;
-    position: relative;
+    position: absolute;
+    top: 0;
     float: right;
     color: white;
     width: 100%;
